<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.myquiz.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/math2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:adjustViewBounds="true"
                android:src="@drawable/train_your_brain" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:weightSum="1">

                <EditText
                    android:id="@+id/editText"
                    style="@style/questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners3"
                    android:hint="@string/edittext"
                    android:textColor="#000000" />


                <TextView
                    style="@style/questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question1" />

                <RadioGroup
                    android:id="@+id/group1"
                    style="@style/radioGroup">

                    <RadioButton
                        android:id="@+id/q1a1"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q11" />

                    <RadioButton
                        android:id="@+id/q1a2"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q12" />

                    <RadioButton
                        android:id="@+id/q1a3"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q13" />

                    <RadioButton
                        android:id="@+id/q1a4"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q14" />
                </RadioGroup>


                <TextView
                    style="@style/questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2" />

                <RadioGroup
                    android:id="@+id/group2"
                    style="@style/radioGroup">

                    <RadioButton
                        android:id="@+id/q2a1"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q21" />

                    <RadioButton
                        android:id="@+id/q2a2"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q22" />

                    <RadioButton
                        android:id="@+id/q2a3"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q23" />

                    <RadioButton
                        android:id="@+id/q2a4"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q24" />
                </RadioGroup>

                <TextView
                    style="@style/questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3" />

                <RadioGroup
                    android:id="@+id/group3"
                    style="@style/radioGroup">

                    <RadioButton
                        android:id="@+id/q3a1"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q31" />

                    <RadioButton
                        android:id="@+id/q3a2"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q32" />

                    <RadioButton
                        android:id="@+id/q3a3"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q33" />

                    <RadioButton
                        android:id="@+id/q3a4"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q34" />
                </RadioGroup>

                <TextView
                    style="@style/questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question4" />

                <RadioGroup
                    android:id="@+id/group4"
                    style="@style/radioGroup">

                    <RadioButton
                        android:id="@+id/q4a1"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q41" />

                    <RadioButton
                        android:id="@+id/q4a2"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q42" />

                    <RadioButton
                        android:id="@+id/q4a3"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q43" />

                    <RadioButton
                        android:id="@+id/q4a4"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q44" />
                </RadioGroup>

                <TextView
                    style="@style/questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question5" />

                <RadioGroup
                    android:id="@+id/group5"
                    style="@style/radioGroup">

                    <RadioButton
                        android:id="@+id/q5a1"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q51" />

                    <RadioButton
                        android:id="@+id/q5a2"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q52" />

                    <RadioButton
                        android:id="@+id/q5a3"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q53" />

                    <RadioButton
                        android:id="@+id/q5a4"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q54" />
                </RadioGroup>

                <TextView
                    style="@style/questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question6" />

                <RadioGroup
                    android:id="@+id/group6"
                    style="@style/radioGroup">

                    <RadioButton
                        android:id="@+id/q6a1"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q61" />

                    <RadioButton
                        android:id="@+id/q6a2"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q62" />

                    <RadioButton
                        android:id="@+id/q6a3"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q63" />

                    <RadioButton
                        android:id="@+id/q6a4"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q64" />
                </RadioGroup>


                <TextView
                    style="@style/questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question7" />

                <EditText
                    android:id="@+id/q7a"
                    style="@style/radioGroup"
                    android:hint="@string/answerEdit" />

                <TextView
                    style="@style/questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question8" />

                <LinearLayout
                    style="@style/radioGroup"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q8a1"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q81" />

                    <CheckBox
                        android:id="@+id/q8a2"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q82" />

                    <CheckBox
                        android:id="@+id/q8a3"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q83" />

                    <CheckBox
                        android:id="@+id/q8a4"
                        style="@style/buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q84" />


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/bottomButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true">

                        <Button
                            android:id="@+id/submit"
                            style="@style/bottom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="submit"
                            android:text="@string/submit" />

                        <Button
                            style="@style/bottom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="reset1"
                            android:text="@string/reset" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
